fix broken layout

--- a/humanity.css
+++ b/humanity.css
@@ -253,8 +253,11 @@ box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, .4);
 .social_links{
   margin: 20px;
 
-#twitter-widget-0 {
-  margin-bottom: -2px;  
+.fb_iframe_widget {
+display: inline-block;
+position: absolute;
+top: 20px;
+right: 190px;
 }
 
 @media only screen and (max-width: 890px) {
